--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vaultlink - Login</title>
+  <title>Vaultlink - Register</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -15,7 +15,7 @@
       margin: 0;
     }
 
-    .login-container {
+    .register-container {
       background-color: white;
       padding: 2rem;
       border-radius: 8px;
@@ -36,8 +36,9 @@
       margin-bottom: 0.25rem;
     }
 
-    input[type="email"],
-    input[type="password"] {
+    input[type="text"],
+    input[type="password"],
+    input[type="email"] {
       width: 100%;
       padding: 0.5rem;
       border: 1px solid #ccc;
@@ -60,32 +61,41 @@
       background-color: #0051a3;
     }
 
-    .register-link {
+    .login-link {
       margin-top: 1rem;
       text-align: center;
       font-size: 0.9rem;
     }
 
-    .register-link a {
+    .login-link a {
       color: #003366;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login to Vaultlink</h2>
+  <div class="register-container">
+    <h2>Create a Vaultlink Account</h2>
     <form>
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" required />
 
       <label for="password">Password</label>
       <input type="password" id="password" name="password" required />
 
-      <button type="submit">Login</button>
+      <label for="fullname">Full Name</label>
+      <input type="text" id="fullname" name="fullname" required />
+
+      <label for="cpr">CPR Number</label>
+      <input type="text" id="cpr" name="cpr" required />
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required />
+
+      <button type="submit">Register</button>
     </form>
-    <div class="register-link">
-      Don’t have an account? <a href="register.html">Register here</a>
+    <div class="login-link">
+      Already have an account? <a href="loginPage.html">Log in here</a>
     </div>
   </div>
 </body>
