--- a/CLIENT_SCRIPTS/startPage.html
+++ b/CLIENT_SCRIPTS/startPage.html
@@ -77,10 +77,10 @@
   <header>
     <h1>Vaultlink</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Services</a>
+      <a href="startPage.html">Home</a>
+      <a href="services.html">Services</a>
       <a href="loginPage.html">Login</a>
-      <a href="#">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
