--- a/CLIENT_SCRIPTS/loginPage.html
+++ b/CLIENT_SCRIPTS/loginPage.html
@@ -67,26 +67,29 @@
     }
 
     .register-link a {
-      color: #003366;
+      color: #003366;;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <h2>Login to Vaultlink</h2>
-    <form>
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
+      <h2>Login to Vaultlink</h2>
+      <form id="loginForm">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
 
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" required />
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required />
 
-      <button type="submit">Login</button>
-    </form>
-    <div class="register-link">
-      Don’t have an account? <a href="register.html">Register here</a>
-    </div>
+          <button type="submit" id="loginButton">Login</button>
+      </form>
+      <div class="register-link">
+        Don’t have an account? <a href="register.html">Register here</a>
+      </div>
   </div>
+
+  <script src="../SERVER_SCRIPTS/utilities.js"></script>
+  <script src="../SERVER_SCRIPTS/login.js"></script>
 </body>
 </html>
