--- a/CLIENT_SCRIPTS/startPage.html
+++ b/CLIENT_SCRIPTS/startPage.html
@@ -119,10 +119,9 @@
       <label for="confirm">Confirm Password</label><br>
       <input type="password" id="confirm" name="confirm" required style="width: 100%; padding: 0.5rem; margin-bottom: 1.5rem;"><br>
   
-      <button type="submit" style="width: 104%; padding: 0.5rem; background-color: #003366; color: white; border: none; border-radius: 4px;">Register</button>
+      <button type="submit" id="registerButton" style="width: 104%; padding: 0.5rem; background-color: #003366; color: white; border: none; border-radius: 4px;">Register</button>
     </form>
   </section>
-  
 
   <footer>
     &copy; 2025 Vaultlink. All rights reserved.
@@ -133,11 +132,13 @@
       const pw = document.getElementById("password").value;
       const confirm = document.getElementById("confirm").value;
       if (pw !== confirm) {
-        alert("Passwords do not match!");
+        //alert("Passwords do not match!");
         e.preventDefault(); // stop the form from submitting
       }
     });
   </script>
-  
+
+  <script src="../SERVER_SCRIPTS/utilities.js"></script>
+  <script src="../SERVER_SCRIPTS/register.js"></script>
 </body>
 </html>
