--- a/CLIENT_SCRIPTS/vaultlinkDashboard.html
+++ b/CLIENT_SCRIPTS/vaultlinkDashboard.html
@@ -148,6 +148,8 @@
     </div>
   </div>
 
+  <div id="user-info"></div>
+
   <script>
     const links = document.querySelectorAll('.sidebar a');
     const content = document.querySelector('.tab-content');
@@ -225,5 +227,10 @@
       }
     }
   </script>
+
+  <script src="../SERVER_SCRIPTS/userClass.js"></script>
+  <script src="../SERVER_SCRIPTS/utilities.js"></script>
+  <script src="dashboard.js"></script>
+
 </body>
 </html>
