fixed button dom

--- a/CLIENT_SCRIPTS/register.html
+++ b/CLIENT_SCRIPTS/register.html
@@ -90,7 +90,7 @@
         <label for="confirm">Confirm Password</label>
         <input type="password" id="confirm" name="confirm" required />
     
-        <button type="submit">Register</button>
+        <button type="submit" id="registerButton">Register</button>
     </form>
       <div class="register-link">
         Already have an account? <a href="loginPage.html">Login here</a>
