--- a/CLIENT_SCRIPTS/vaultlinkDashboard.html
+++ b/CLIENT_SCRIPTS/vaultlinkDashboard.html
@@ -125,7 +125,7 @@
     <a href="#inbox">Inbox</a>
     <a href="#usage">Usage</a>
     <a href="#subscription">Subscription</a>
-    <a href="#cards">Cards</a>
+    <a href="#accounts">Accounts</a>
     <div class="divider"></div>
     <a href="#investments">Investments</a>
     <a href="#housing">Housing</a>
