--- a/CLIENT_SCRIPTS/vaultlinkDashboard.html
+++ b/CLIENT_SCRIPTS/vaultlinkDashboard.html
@@ -200,7 +200,12 @@
       inbox: `<h2>Inbox</h2><p>Check your messages, notifications, and alerts here.</p>`,
       usage: `<h2>Usage</h2><p>Track your expenses, payment history, and usage statistics over time.</p>`,
       subscription: `<h2>Subscription</h2><p>Manage your active subscriptions, billing info, and renewal preferences.</p>`,
-      cards: `<h2>Cards</h2><p>View, manage, and block your cards here.</p>`,
+      accounts: 
+      `<h2>Accounts</h2>
+      <p>View and manage your accounts here.</p>
+      <h3>Cards</h3>
+      `,
+      
       investments: `<h2>Investments</h2><p>Review your stocks, mutual funds, and performance analytics.</p>`,
       housing: `<h2>Housing</h2><p>Manage your mortgages, rent payments, and home valuation tools.</p>`,
       pension: `<h2>Pension</h2><p>View pension contributions, growth forecasts, and plan options.</p>`,
