--- a/CLIENT_SCRIPTS/vaultlinkDashboard.html
+++ b/CLIENT_SCRIPTS/vaultlinkDashboard.html
@@ -158,7 +158,7 @@
 <body>
   <div class="sidebar">
     <h2>Vaultlink</h2>
-    <a href="#overview" class="active">Overview</a>
+    <a id="overview" href="#overview" class="active">Overview</a>
     <a href="#inbox">Inbox</a>
     <a href="#usage">Usage</a>
     <a href="#subscription">Subscription</a>
