--- a/CLIENT_SCRIPTS/vaultlinkDashboard.html
+++ b/CLIENT_SCRIPTS/vaultlinkDashboard.html
@@ -222,6 +222,14 @@
       overview: 
       `<h2>Overview</h2>
       <p>Here you can see a summary of your account status, recent transactions, and financial highlights.</p>
+      <div class="account-id">
+        <h3>Your specific account ID, used to transfer money from one account to another.</h3>
+        <p id="ID">ID: #00000000</p>
+      </div>
+      <div class="account-worth">
+        <h3>Total Account Balance</h3>
+        <p id="total-balance">$0.00</p>
+      </div>
       <div class="transactions">
       <h3>Recent Transactions</h3>
       <table class="transaction-table">
