--- a/CLIENT_SCRIPTS/vaultlinkDashboard.html
+++ b/CLIENT_SCRIPTS/vaultlinkDashboard.html
@@ -180,6 +180,10 @@
         box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       }
 
+      #account-menu-container {
+        display: hidden;
+      }
+
   </style>
 </head>
 <body>
@@ -313,7 +317,7 @@
     async function convertCurrency() {
       const amount = document.getElementById("amount").value;
       const from = document.getElementById("fromCurrency").value;
-      const to = document.getElementById("toCurrency").value;
+      const to = document.getElementById("toCurrency").value; 
       const resultEl = document.getElementById("result");
 
       if (!amount || isNaN(amount)) {
