--- a/CLIENT_SCRIPTS/vaultlinkDashboard.html
+++ b/CLIENT_SCRIPTS/vaultlinkDashboard.html
@@ -284,6 +284,7 @@
     <a href="#profile">Profile</a>
     <a href="#settings">Settings</a>
     <a href="#contact">Contact</a>
+    <a id="logoutButton" href="#logout">Logout</a>
   </div>
 
   <div class="main">
@@ -481,7 +482,7 @@
 
       profile: `<h2>Profile</h2><p>Update your personal information, ID verification, and preferences.</p>`,
       settings: `<h2>Settings</h2><p>Control security, notifications, and platform behavior.</p>`,
-      contact: `<h2>Contact</h2><p>Reach our support team or find office contact details.</p>`
+      contact: `<h2>Contact</h2><p>Reach our support team or find office contact details.</p>`,
     };
 
     const API_KEY = "FS7CMSJNUXSKFR6F"; // Replace with your Alpha Vantage key
