--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My GitHub Page</title>
+    <title>My GitHub Page</title>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <p>Welcome to my GitHub Pages site.</p>
+    <h1>Hello, world!</h1>
+    <p>Welcome to my GitHub Pages site.</p>
+    
+    <script>
+        // Redirect to startPage.html when the page loads
+        window.onload = function() {
+            window.location.href = 'startPage.html';
+        };
+    </script>
 </body>
 </html>
