--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         // Redirect to startPage.html when the page loads
         window.onload = function() {
-            window.location.href = 'CLIENT_SCRIPTS/startPage.html';
+            //window.location.href = 'CLIENT_SCRIPTS/startPage.html';
         };
     </script>
 </body>
